# beam-gleam

./: Cargo.toml  README.md
src/: camera.rs  hittable.rs  hittable_list.rs  interval.rs  main.rs  material.rs  ray.rs  sphere.rs
src/utils/: color.rs  mod.rs  vec3.rs
