[package]
name = "beam-gleam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

# dont warn unused variables
[lints.rust]
unused = "allow"

[profile.release]
opt-level = 'z'
lto = true
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
overflow-checks = false
